--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "pico-aws-cwlog",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "pico sized aws cloudwatch log agent",
   "main": "index.js",
   "scripts": {
-    "test": "node test.js"
+    "test": "DEBUG=1 node test.js"
   },
   "repository": {
     "type": "git",
